--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
         padding: 10px;
       }
       ul {
+        list-style-type: none;
         padding-left: 15px;
       }
       li {
@@ -30,9 +31,10 @@
   </head>
   <body>
     <h3>Emails Found</h3>
-    <ol id="emailList"></ol>
+    <ul id="emailList"></ul>
     <button id="findEmailsBtn">Find Emails</button>
 
     <script src="popup.js"></script>
   </body>
 </html>
+
