--- a/popup.html
+++ b/popup.html
@@ -65,7 +65,7 @@
         cursor: pointer;
         border: none;
         border-bottom: 2px solid transparent;
-        background: #e9ecef;
+        background: #85bffa;
       }
       .tab-btn.active {
         background: #007bff;
@@ -116,3 +116,4 @@
     <script src="popup.js"></script>
   </body>
 </html>
+
